# KontrolnayaRabotaNomer2

./: CMakeLists.txt  README.md  main.cpp
Clinic/: clinic.cpp  clinic.h
Clinic/Info/: days.cpp  days.h
Clinic/Info/Shedule/: schedule.cpp  schedule.h
Clinic/Information/: days.cpp  days.h
Clinic/Information/Shedule/: schedule.cpp  schedule.h
Person/: person.cpp  person.h
Person/Employee/: director.cpp  director.h  doctor.cpp  doctor.h  intern.cpp  intern.h  security.cpp  security.h
Person/Patient/: patient.cpp  patient.h
